<resources>
    <string name="app_name">Shabashka</string>
    <string name="client_id">616340947682-ucqlio2m7unnop91dhpdu5hd70qjcalu.apps.googleusercontent.com</string>
    <string name="google_auth">Вход с Google</string>
    <string name="email">Введите email</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="password">Введите пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="log_in">Войти</string>
    <string name="dont_have_account">Нет аккаунта?</string>
    <string name="login_failed">Вход не выполнен</string>
    <string name="internet_problems">Проблемы с интернетом</string>
    <string name="auth_error">Ошибка аутентификации через Google</string>
    <string name="enter_email_and_password">Ошибка аутентификации через Google</string>
    <string name="incorrect_email_and_password">Неверный email или пароль</string>
    <string name="incorrect_email">Неверный email</string>
    <string name="short_password">Пароль короче 6 символов</string>
    <string name="different_passwords">Пароли не совпадают</string>
    <string name="email_already_used">Этот email уже используется</string>
    <string name="salary_per_hour">Br за час</string>
    <string name="salary_fixed">Br</string>
    <string name="home">Главная</string>
    <string name="favorite">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="jobs_collection_path">jobs</string>
    <string name="create">Создать</string>
    <string name="settings">Настройки</string>
    <string name="fill_fields">Заполните все поля</string>
    <string name="shabashka_added">Предложение добавлено</string>
    <string name="error">Ошибка: </string>
    <string name="max_length">Максимальная длина: </string>
    <string name="title">Заголовок</string>
    <string name="description">Описание</string>
    <string name="location">Местоположение</string>
    <string name="contact_phone">Контактный телефон</string>
    <string name="payment">Оплата Br</string>
    <string name="payment_hourly">Почасовая оплата</string>
    <string name="create_shabashka">Создать</string>
    <string name="contacts">Контакты</string>
    <string name="response">Откликнуться</string>
    <string name="phone">Телефон:</string>
    <string name="mail">Email:</string>
    <string name="close">Закрыть</string>
    <string name="call">Позвонить</string>
    <string name="my_shabashki">Мои предложения</string>
    <string name="user_icon_description">Иконка пользователя</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="responses">Откликнулись</string>
    <string name="google_maps_key">AIzaSyAlLYEqgWX16EU7oN6TbFslRCV_zitm6bQ</string>
    <string name="responded">Отликнулся:</string>
    <string name="users_collection_path">users</string>
    <string name="ratings_collection_path">ratings</string>
    <string name="grade">Оцените качество работы</string>
    <string name="submit">Отправить</string>
    <string name="cancel">Отмена</string>
    <string name="favorites_collection_path">favorites</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="number_pattern">+375XXXXXXXXX</string>
    <string name="save">Сохранить</string>
    <string name="enter_correct_number">Введите корректный номер телефона</string>
    <string name="user">Пользователь</string>
    <string name="applications_collection_path">applications</string>
    <string name="already_responded">Вы уже откликнулись</string>
    <string name="response_sent">Отклик отправлен</string>
    <string name="system">Системная</string>
    <string name="light">Светлая</string>
    <string name="dark">Темная</string>
    <string name="job_completed">Работа выполнена</string>
    <string name="my_responses">Отклики</string>
    <string name="theme">Тема</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="search_name_surname_email">Поиск по имени, фамилии или почте</string>
    <string name="search_name_location">Поиск по названию или местоположению</string>
    <string name="no_internet_connection">Нет подключения к интернету</string>
    <string name="failed_to_load_rating">Не удалось загрузить рейтинг</string>
    <string name="no_phone_number">Номер телефона не указан</string>
    <string name="successfully_completed">Задание успешно завершено</string>
    <string name="failed_to_delete_job">Ошибка удаления задания</string>
    <string name="failed_to_save_rating">Ошибка сохранения оценки</string>
    <string name="for_moderation">Отправлено на модерацию</string>
</resources>