<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/title"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/description"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <EditText
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/location"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/contact_phone"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <EditText
            android:id="@+id/et_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/payment"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <CheckBox
            android:id="@+id/cb_hourly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_hourly"/>

        <Button
            android:id="@+id/btn_create_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_shabashka"
            android:layout_marginTop="16dp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</ScrollView>
