<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="?attr/colorSurface">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#4275F4"
            android:paddingVertical="12dp"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

        <Button
            android:id="@+id/btn_google_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#4285F4"
            android:drawableLeft="@drawable/ic_google"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/google_auth"
            android:textColor="@android:color/white"
            tools:ignore="RtlHardcoded,TextContrastCheck,VisualLintButtonSize" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/dont_have_account"
            android:textColor="@color/link_color"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>