<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_user"
            android:contentDescription="@string/user_icon_description"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_marginBottom="32dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResponses"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?android:attr/colorBackground"
            android:elevation="4dp"
            android:text="@string/my_responses"
            android:textAlignment="viewStart"
            android:textColor="?android:attr/textColorPrimary"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_envelope"
            app:iconPadding="12dp"
            app:iconTint="?android:attr/textColorPrimary"
            tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMyJobs"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_shabashki"
            android:textAlignment="viewStart"
            app:icon="@drawable/ic_work"
            app:iconPadding="12dp"
            app:iconTint="?android:attr/textColorPrimary"
            android:textColor="?android:attr/textColorPrimary"
            android:backgroundTint="?android:attr/colorBackground"
            android:elevation="4dp"
            app:cornerRadius="16dp"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResponded"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/responses"
            android:textAlignment="viewStart"
            app:icon="@drawable/ic_hand"
            app:iconPadding="12dp"
            app:iconTint="?android:attr/textColorPrimary"
            android:textColor="?android:attr/textColorPrimary"
            android:backgroundTint="?android:attr/colorBackground"
            android:elevation="4dp"
            app:cornerRadius="16dp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</ScrollView>
